--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #f49097;
-  --primary-light: #fcd6da;
-  --primary-dark: #a04e56;
+  --primary: #b8b8b8;
+  --primary-light: #acacac;
+  --primary-dark: #56F5CA;
   --primary-contrast-light: #fff;
   --primary-contrast-dark: #111;
   
