--- a/src/components/ProductList.module.css
+++ b/src/components/ProductList.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 2rem;
+  margin: 15rem 0;
   gap: 2rem;
 }
 
@@ -10,6 +11,6 @@
   padding: 1rem 3rem;
   display: grid;
   gap: 3rem;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  grid-template-rows: repeat(auto-fit, min-content);
-}
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-rows: repeat(auto-fit, min-content);
+  }
