--- a/src/components/MyHeader.module.css
+++ b/src/components/MyHeader.module.css
@@ -5,7 +5,7 @@
   gap: 3rem;
   height: 15rem;
   padding: 5rem;
-  background-color: var(--primary-dark);
+  background-color: var(--primary);
 
   position: fixed;
   top: 0;
@@ -17,6 +17,7 @@
 .container h1 {
   font-size: 5rem;
   font-weight: bolder;
+  color: rgb(197, 197, 89);
 }
 
 .containerImg img {
@@ -27,6 +28,7 @@
 
 .container p {
   font-size: 1.5rem;
+  color: rgb(236, 236, 138);
 }
 
 .cartInfo {
@@ -47,6 +49,7 @@
 .cartIcon {
   position: relative;
   display: inline-block;
+  color: rgb(236, 236, 138);
 }
 
 .cartCount {
@@ -60,4 +63,22 @@
   padding: 0.2rem 0.6rem;
   font-weight: bold;
   z-index: 1;
+}
+
+.headerRight {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.authLink {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: rgb(236, 236, 138);
+  text-decoration: none;
+  transition: color 0.2s ease;
+}
+
+.authLink:hover {
+  color: yellow;
 }
